--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <!-- Include TensorFlow.js library -->
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.6.0/dist/tf.min.js"></script>
   	<script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-automl@1.3.0/dist/tf-automl.min.js"></script>
-    <script src="segmentColor.js"></script>
+    <!-- Include your JavaScript file -->
+    <script src="modified.js"></script>
 </body>
 </html>
